[package]
name = "dportable"
version = "0.1.0"
edition = "2021"
authors = ["zduny <dzduniak@gmail.com>"]
description = "Portable interface for various utilities."
license = "MIT"
repository = "https://github.com/zduny/dportable"
documentation = "https://docs.rs/dportable/"

[dependencies]
dportable-macros = "0.1.0"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "time", "macros"] }
parking_lot = "0.12"
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
js-utils = { version = "0.1", features = ["spawn", "sleep"] }
wasm-bindgen-test = "0.3"

